--- a/sock_raw/Makefile
+++ b/sock_raw/Makefile
@@ -1,6 +1,7 @@
 
 CC=gcc
-LIB=../wf_lib/include/ -lwf -lpthread -lm
+WFLIB=../wf_lib/include/ -lwf
+LIB=-lpthread -lm
 INCLUDE=../wf_lib/include/
 
 TARGET=net_monitor
@@ -9,10 +10,10 @@ OBJS=net_monitor.o filter.o misc.o peek.o
 all:$(TARGET)
 
 $(TARGET):$(OBJS)
-	$(CC) $(OBJS) -L$(LIB) -o $(TARGET)
-
+	$(CC) $(OBJS) -L$(WFLIB) $(LIB) -o $(TARGET)
+#	$(CC) $(OBJS) ../wf_lib/libwf.so $(LIB) -o $(TARGET)
 %.o:%.c
-	$(CC) -c -I$(INCLUDE) -L$(LIB) $< -o $@
+	$(CC) -c -I$(INCLUDE) $< -o $@
 
 pack:
 	rm -f *.o
