--- a/wf_lib/Makefile
+++ b/wf_lib/Makefile
@@ -3,7 +3,7 @@ MAKELIB=ar
 CC=cc
 RM=rm
 
-TARGET=libwf.a
+TARGET=libwf
 #OBJ = ac_timer.o cJSON.o [libpx_thread.o pal_time.o] wf_bit.o \
 	wf_char.o [wf_hacker.o] wf_ipc.o wf_kv.o wf_log.o wf_memory.o wf_misc.o  \
 	wf_net.o wf_threadpool.o wf_tree.o wf_param.o strnormalize.o md5.o
@@ -11,11 +11,14 @@ OBJ = ac_timer.o cJSON.o wf_bit.o wf_char.o wf_ipc.o wf_kv.o \
 	wf_log.o wf_memory.o wf_misc.o wf_net.o wf_threadpool.o wf_tree.o \
 	wf_param.o strnormalize.o md5.o
 
-all: $(TARGET)
+all: $(TARGET).a $(TARGET).so
 
-$(TARGET): $(OBJ)
-	$(MAKELIB) -rv $(TARGET) $(OBJ)
-	cp -f $(TARGET) include/
+$(TARGET).a: $(OBJ)
+	$(MAKELIB) -rv $@ $^
+	cp -f $(TARGET).a include/
+$(TARGET).so: $(OBJ)
+	$(CC) -o $@ -fPIC -shared $^
+#	cp -f $(TARGET).so include/
 %.o: %.c
 	$(CC) -c -Iinclude/ $< -o $@
 
@@ -25,4 +28,4 @@ pack:
 	zip -qr $(TARGET).zip ./
 
 clean:
-	$(RM) -f *.o $(TARGET)
+	$(RM) -f *.o $(TARGET).a $(TARGET).so
