--- a/test/icmp/Makefile
+++ b/test/icmp/Makefile
@@ -1,14 +1,14 @@
 
 CC=gcc
-#LDFLAG= -lpthread -lm
-#LDFLAG+= -L../../wf_lib/include/ -lwf
+LDFLAG= -lpthread -lm
+LDFLAG+= -L../../wf_lib/include/ -lwf
 #LDFLAG+= -L../../ghttp_lib/include/ -lghttp
 
-#CFLAG= -I../../wf_lib/include/
-#CFLAG+= -I../../ghttp_lib/include/
+CFLAG= -I../../wf_lib/include/
+#CFLAG= -I../../ghttp_lib/include/
 
-TAG=inotify
-.PHONY: $(TAG)
+TAG=icmp
+all: $(TAG)
 
 $(TAG): $(TAG).c
 	$(CC) -g $(TAG).c $(CFLAG) $(LDFLAG) -o $@
