--- a/wf_lib/Makefile
+++ b/wf_lib/Makefile
@@ -9,7 +9,7 @@ TARGET=libwf
 
 OBJ = ac_timer.o cJSON.o wf_bit.o wf_char.o wf_ipc.o wf_kv.o \
 	wf_log.o wf_memory.o wf_misc.o wf_net.o wf_threadpool.o wf_tree.o \
-	wf_param.o strnormalize.o md5.o wf_base64.o wf_icmp.o
+	wf_param.o strnormalize.o md5.o wf_base64.o wf_icmp.o urlcode.o
 
 all: $(TARGET).a $(TARGET).so
 
