move admin/wftool to wftool/wftool

--- a/admin/Makefile
+++ b/admin/Makefile
@@ -6,17 +6,13 @@ GLIB=../ghttp_lib/include/ -lghttp
 INCLUDE=../wf_lib/include/
 GINCLUDE=../ghttp_lib/include/
 
-all:wolf wftool test
+all:wolf test
 
 wolf:wolf.c
 	$(CC) wolf.c -I$(INCLUDE) -L$(LIB) -o wolf
-
-wftool:wftool.c
-	$(CC) wftool.c -g -I$(INCLUDE) -L$(LIB) -o wftool
-	cp -f wftool /usr/sbin/
 
 test:test.c
 	$(CC) -g test.c -I$(INCLUDE) -I$(GINCLUDE) -L$(LIB) -L$(GLIB) -o test
 
 clean:
-	rm -f *.o wolf wftool test
+	rm -f *.o wolf test
