--- a/admin/Makefile
+++ b/admin/Makefile
@@ -1,18 +1,18 @@
 
 CC=gcc
-LIB=../wf_lib/include/ -lwf -lpthread -lm
-GLIB=../ghttp_lib/include/ -lghttp
+LIB=../wf_lib/lib/libwf.a -lpthread -lm
+GLIB=../ghttp_lib/include/libghttp.a
 
-INCLUDE=../wf_lib/include/
-GINCLUDE=../ghttp_lib/include/
+INCLUDE=-I../wf_lib/include/
+GINCLUDE=-I../ghttp_lib/include/
 
 all:wolf test
 
 wolf:wolf.c
-	$(CC) wolf.c -I$(INCLUDE) -L$(LIB) -o wolf
+	$(CC) wolf.c $(INCLUDE) $(LIB) -o wolf
 
 test:test.c
-	$(CC) -g test.c -I$(INCLUDE) -I$(GINCLUDE) -L$(LIB) -L$(GLIB) -o test
+	$(CC) -g test.c $(INCLUDE) $(GINCLUDE) $(LIB) $(GLIB) -o test
 
 clean:
 	rm -f *.o wolf test
