--- a/speedtest/Makefile
+++ b/speedtest/Makefile
@@ -1,8 +1,8 @@
 
 CC=gcc
 LDFLAGS= -lpthread -lm
-LDFLAGS+= -L../wf_lib/include/ -lwf
-#LDFLAGS+= -L../ghttp_lib/include/ -lghttp
+LDFLAGS+= ../wf_lib/lib/libwf.a
+#LDFLAGS+= ../ghttp_lib/lib/libghttp.a
 
 CFLAGS= -I../wf_lib/include/
 #CFLAGS+= -I../ghttp_lib/include/
