add wf_lookup_dns and test libbbwget

--- a/ghttp_lib/Makefile
+++ b/ghttp_lib/Makefile
@@ -14,10 +14,12 @@ all: $(TARGET).a $(TARGET).so
 
 $(TARGET).a: $(obj)
 	$(MAKELIB) -rv $@ $^
+	test -d lib/ || mkdir -p lib
 	$(MV) -f $@ lib/
 
 $(TARGET).so: $(obj)
 	$(CC) -o $@ -fPIC -shared $^
+	test -d lib/ || mkdir -p lib
 	$(MV) -f $@ lib/
 
 %.o: %.c
