--- a/wf_lib/Makefile
+++ b/wf_lib/Makefile
@@ -11,7 +11,7 @@ TARGET=libwf
 OBJ = ac_timer.o cJSON.o wf_bit.o wf_char.o wf_ipc.o wf_kv.o \
 	wf_log.o wf_memory.o wf_misc.o wf_net.o wf_threadpool.o wf_tree.o \
 	wf_param.o strnormalize.o md5.o wf_base64.o wf_icmp.o urlcode.o \
-	thread_timer.o select_event.o
+	thread_timer.o select_event.o nano_ecc.o random.o
 
 all: $(TARGET).a $(TARGET).so
 
